adding hover functionality to gantt bars

--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,3 @@
 [selected_history]
 
-PackedScene=PackedStringArray("uid://f621ws6wfyog", "uid://bvw455jm0ejqy", "uid://dl1vcfb7hqylb")
+PackedScene=PackedStringArray("uid://geysmsrle8io", "uid://co5uy51mo4xql", "uid://f621ws6wfyog", "uid://bvw455jm0ejqy", "uid://dl1vcfb7hqylb")
