--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -1,3 +1,7 @@
+[res://Environment/environment.tscn]
+
+groups=[&"attractions"]
+
 [res://World/World.tscn]
 
-groups=[&"attractions", &"gantt"]
+groups=[&"gantt"]
