--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,9 +9,9 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Barrier/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Barrier/")
-dock_node_current_tab=1
+dock_filesystem_selected_paths=PackedStringArray("res://GanttBar/GanttBar.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://World/", "res://Singletons/", "res://SimulationControls/", "res://GanttBar/", "res://Gantt/", "res://Enemy/")
+dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-216
+dock_hsplit_3=-684
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,24 +28,24 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://World/World.tscn")
-current_scene="res://World/World.tscn"
+open_scenes=PackedStringArray("res://World/World.tscn", "res://Gantt/gantt.tscn", "res://Enemy/Enemy.tscn", "res://SimulationControls/simulation_controls.tscn", "res://Attraction/attraction.tscn", "res://GanttBar/GanttBar.tscn")
+current_scene="res://GanttBar/GanttBar.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=0
 mode="windowed"
 position=Vector2i(1, 31)
-size=Vector2i(2049, 1360)
+size=Vector2i(2409, 1360)
 
 [ScriptEditor]
 
-open_scripts=["res://Attraction/attraction.gd", "res://Enemy/enemy.gd", "res://World/world.gd"]
-selected_script="res://Attraction/attraction.gd"
+open_scripts=["res://Attraction/attraction.gd", "res://Enemy/enemy.gd", "res://Gantt/gantt.gd", "res://GanttBar/GanttBar.gd", "res://Singletons/GanttHub.gd", "res://SimulationControls/simulation_controls.gd", "res://World/world.gd"]
+selected_script="res://GanttBar/GanttBar.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
