--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,5 +5,13 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://World/gantt_chart.gd"
+"path": "res://Gantt/gantt.gd"
+}, {
+"base": &"Control",
+"class": &"GanttBar",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://GanttBar/GanttBar.gd"
 }]
