--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -14,4 +14,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://GanttBar/GanttBar.gd"
+}, {
+"base": &"Node",
+"class": &"SimClock",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Singletons/SimClock.gd"
 }]
