--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Gantt/gantt.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://World/", "res://Singletons/", "res://GanttBar/", "res://Gantt/", "res://Enemy/")
+dock_filesystem_selected_paths=PackedStringArray("res://Enemy/enemy.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://World/", "res://Singletons/", "res://SimulationControls/", "res://GanttBar/", "res://Gantt/", "res://Environment/", "res://Enemy/", "res://Attraction/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,24 +28,24 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://World/World.tscn", "res://Gantt/gantt.tscn")
-current_scene="res://Gantt/gantt.tscn"
+open_scenes=PackedStringArray("res://World/World.tscn", "res://Gantt/gantt.tscn", "res://Environment/environment.tscn", "res://Enemy/Enemy.tscn", "res://SimulationControls/simulation_controls.tscn", "res://Attraction/attraction.tscn")
+current_scene="res://Enemy/Enemy.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="windowed"
 position=Vector2i(1, 31)
-size=Vector2i(2112, 1360)
+size=Vector2i(1982, 1360)
 
 [ScriptEditor]
 
-open_scripts=["res://Enemy/enemy.gd", "res://Gantt/gantt.gd", "res://GanttBar/GanttBar.gd", "res://Singletons/GanttHub.gd", "res://Singletons/SimClock.gd", "res://World/world.gd"]
-selected_script="res://Gantt/gantt.gd"
+open_scripts=["res://Attraction/attraction.gd", "res://Enemy/enemy.gd", "res://Environment/environment.gd", "res://Gantt/gantt.gd", "res://GanttBar/GanttBar.gd", "res://Singletons/GanttHub.gd", "res://Singletons/SimClock.gd", "res://SimulationControls/simulation_controls.gd", "res://World/world.gd"]
+selected_script="res://Enemy/enemy.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
